namespaces/live-1.cloud-platform.service.justice.gov.uk/anasir_test_hello_world/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: anasir_test_hello_world
  labels:
    cloud-platform.justice.gov.uk/is-production: "false"
    cloud-platform.justice.gov.uk/environment-name: "development"
  annotations:
    cloud-platform.justice.gov.uk/business-unit: "HMPPS"
    cloud-platform.justice.gov.uk/slack-channel: "cmd-dev"
    cloud-platform.justice.gov.uk/application: "Hello World"
    cloud-platform.justice.gov.uk/owner: "Check My Diary: aisha.nasir@digital.justice.gov.uk"
    cloud-platform.justice.gov.uk/source-code: "https://user-guide.cloud-platform.service.justice.gov.uk/documentation/getting-started/env-create.html#create-an-environment"
    cloud-platform.justice.gov.uk/team-name: "check-my-diary"
